--- a/soundspinner/style/controls.scss
+++ b/soundspinner/style/controls.scss
@@ -5,7 +5,6 @@ $sliderButtonSize : 50px;
 
 $sliderMargin : 30px;
 
-
 $animationDuration : 0.5s;
 
 #WaveDisplay {
@@ -17,7 +16,7 @@ $animationDuration : 0.5s;
 	z-index: 1;
 }
 
-$buttonSize : 95px;
+$buttonSize : 135px;
 $smallButtonSize : 0.5 * $buttonSize;
 
 @keyframes AnimateIn {
@@ -39,7 +38,6 @@ $smallButtonSize : 0.5 * $buttonSize;
 	}
 }
 
-
 #RecordButton {
 	z-index: 10;
 	position: absolute;
@@ -51,6 +49,10 @@ $smallButtonSize : 0.5 * $buttonSize;
 	margin-left: -$buttonSize / 2;
 	margin-top: -$buttonSize / 2;
 	background-color: white;
+  background-image: url(../images/micpuppy.png);
+	background-size: 70% 70%;
+  background-repeat: no-repeat;
+  background-position: 22px 50%;
 	border-radius: 50%;
 	cursor: pointer;
 	box-shadow: 0.1rem 0.1rem 1rem 0.1rem rgba(0, 0, 0, 0.2);
